# Scrap_Static_Dynamic_Data

./: .env  .gitignore  README.md  debug_schema.gv  detailed_pydantic_schema  main.py  pyproject.toml  requirements.txt
src/: clean_data.py  config.py  data_cleaner.py  data_model.py  dynamic_models.py  save_scraped_data.py  scrap_web_data.py  static_models.py  visualize.py  visualizer.py  web_scraper.py
src/scrape_data/: clean_data.py  config.py  dynamic_models.py  main.py  save_scraped_data.py  scrape_web_data.py  static_models.py  visualize.py
src/scrape_data/utils/: accept_cookies.py  decorators.py  render_graph.py
src/utils/: decorators.py
tests/: README.md  test_clean_data.py  test_dynamic_models.py  test_main.py  test_playwright.py  test_save_scraped_data.py  test_scrape_web_data.py  test_static_models.py  test_visualize.py
tests/utils/: test_accept_cookies.py  test_render_graph.py  test_retry_decorator.py
