[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-static-dynamic-data"
version = "0.1.0"
description = "Scrape static & dynamic web data, clean, save, and visualize"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "playwright",
    "pandas",
    "pydantic==1.10",
    "nest-asyncio",
    "pydantic-mermaid",
    "graphviz",
    "requests",
    "beautifulsoup4",
    "lxml"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "python-dotenv",
]

[project.scripts]
scrape-data = "scrape_data.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q --tb=short --disable-warnings"
testpaths = ["tests"]
